# agent_gym

./: .env.example  .gitignore  README.md  requirements.txt
.cursor/rules/: dspy.mdc  gemini.mdc  project.mdc  python.mdc
checkpoints/: demo_output.json  sgd_agent_mipro.json  test_save.json  test_save_result.json
checkpoints/env_test/: environment_result.json  simulated_user.json
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: api.md  architecture.md  frontend_integration.md  optimization.md  post_training.md  sgd_trace_mapping.md  trace_schema.md
examples/: customer_service.py  sgd_environment_demo.py
scripts/: analyze_sgd_dataset.py  analyze_twitter_data.py  demo_environment.py  optimize_agent.py  optimize_simulated_user.py  run_example.py  test_environment.py  test_optimization.py
src/: __init__.py
src/agent/: __init__.py  agent.py  sgd_agent.py  simulated_user.py
src/data/: __init__.py  sgd_loader.py
src/environment/: __init__.py  env.py  multi_turn_env.py  sgd_env.py
src/optimization/: __init__.py  runner.py
src/post-training/: .env.example  dataset_sgd_bandit.py  env_compiler.py  gemini_judge.py  jsonl_utils.py  prompts.py  pyproject.toml  requirements.txt  reward_fn.py  sgd_trace_parser.py
src/post-training/scripts/: QUICKSTART_MODAL.md  README_MODAL.md  eval.py  prepare_sgd_env.py  setup_modal.sh  train_grpo.py  train_grpo_modal.py
src/reward/: __init__.py  llm_judge.py  reward.py
src/tool_mocker/: __init__.py  mocker.py  sgd_mocker.py
ui/: package-lock.json  package.json
ui2/: README.md  package-lock.json  package.json
(+18 files in other folders)
